# UbexCpp

./: CMakeLists.txt  README.md  main.cpp
include/: README.md  conversions.hpp  exception.hpp  iterator.hpp  stream_helpers.hpp  stream_reader.hpp  stream_writer.hpp  types.hpp  value.cpp  value.hpp
src/: value.cpp
tests/test_utils/: format_helpers.hpp
tests/value_test/: random_usage_test.cpp  value_construction_test.cpp  value_conversion_test.cpp  value_iterator_test.cpp  value_map_and_array_test.cpp
